--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"cypress": "cypress open"
 	},
 	"dependencies": {
+		"@redux-devtools/extension": "^3.3.0",
 		"@reduxjs/toolkit": "^2.6.0",
 		"@ya.praktikum/react-developer-burger-ui-components": "^1.14.2",
 		"clsx": "^2.1.0",
