--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"postcss-loader": "^7.3.3",
 		"prettier": "^2.8.8",
 		"react-refresh": "^0.14.0",
+		"react-router": "^7.5.0",
 		"sass": "^1.69.7",
 		"sass-loader": "^13.3.3",
 		"style-loader": "^3.3.3",
