--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"cypress": "cypress open"
 	},
 	"dependencies": {
+		"@4tw/cypress-drag-drop": "^2.3.0",
 		"@redux-devtools/extension": "^3.3.0",
 		"@reduxjs/toolkit": "^2.6.0",
 		"@ya.praktikum/react-developer-burger-ui-components": "^1.14.2",
